--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: android
 dist: trusty
+
 android:
   components:
     - build-tools-26.0.2
     - android-26
     - extra
+
+before_install:
+  - sudo apt update
+  - sudo apt install -y ant
+
+script:
+  - ant debug install test
