--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ android:
     - extra
 
 before_install:
+  - echo "Checking system version..."
+  - lsb_release -a  # Sprawdza wersję systemu
+  - cat /etc/os-release  # Alternatywne sprawdzenie wersji systemu
+  - uname -a  # Informacje o jądrze systemu
   - sudo apt update
   - sudo apt install -y ant
 
