--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 dist: bionic
+
+language: android
+
 group: dev
 
-script: java -version
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y android-sdk
+
+script:
+  - java -version
