--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ group: dev
 before_install:
   - sudo apt-get update
   - sudo apt-get install -y android-sdk
+  - if ! command -v sdkmanager &> /dev/null; then echo "Android SDK installation failed"; exit 1; fi
 
 script:
   - java -version
+  - sdkmanager --list
