--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,33 @@
-dist: jammy
+dist: bionic
 group: dev
+
+# language: android
 
 script:
   - echo "Checking Java version..."
   - java -version
 
   - echo "Checking if Android SDK is installed..."
-  - export ANDROID_HOME="/usr/local/android-sdk"
+  - export ANDROID_HOME="/usr/local/android-sdk/android-sdk"
   - if [ -d "$ANDROID_HOME" ]; then echo "✅ ANDROID_HOME is set to: $ANDROID_HOME"; else echo "❌ ANDROID_HOME is not set or SDK is missing!"; exit 1; fi
   
   - echo "Checking sdkmanager availability..."
-  - export SDKMANAGER="$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager"
-  - if [ -f "$SDKMANAGER" ]; then 
-      echo "✅ sdkmanager found at: $SDKMANAGER"; 
-    else 
-      echo "Trying alternative path..."
-      export SDKMANAGER="$ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
-      if [ -f "$SDKMANAGER" ]; then
-        echo "✅ sdkmanager found at alternative path: $SDKMANAGER"
-      else
-        echo "❌ sdkmanager not found at expected locations!"
-        exit 1
-      fi
-    fi
+  - export SDKMANAGER="$ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
+  - if [ -f "$SDKMANAGER" ]; then echo "✅ sdkmanager found at: $SDKMANAGER"; else echo "❌ sdkmanager not found at expected location!"; exit 1; fi
 
   - echo "Checking sdkmanager version..."
   - $SDKMANAGER --version --sdk_root=$ANDROID_HOME
 
-  - echo "Installing required components if missing..."
-  - echo "Installing platform-tools..."
-  - $SDKMANAGER "platform-tools" --sdk_root=$ANDROID_HOME
-  
-  - echo "Installing build-tools;30.0.0..."
-  - $SDKMANAGER "build-tools;30.0.0" --sdk_root=$ANDROID_HOME
-  
-  - echo "Installing platforms;android-30..."
-  - $SDKMANAGER "platforms;android-30" --sdk_root=$ANDROID_HOME
-  
-  - echo "Installing Google Play services..."
-  - $SDKMANAGER "extras;google;google_play_services" --sdk_root=$ANDROID_HOME
+  - echo "Listing available SDK components..."
+  - $SDKMANAGER --list --sdk_root=$ANDROID_HOME
 
-  - echo "Checking adb availability..."
-  - export ADB="$ANDROID_HOME/platform-tools/adb"
-  - if [ -f "$ADB" ]; then echo "✅ adb found"; $ADB version; else echo "❌ adb not found!"; exit 1; fi
+  # - echo "Checking adb availability..."
+  # - export ADB="$ANDROID_HOME/platform-tools/adb"
+  # - if [ -f "$ADB" ]; then echo "✅ adb found"; $ADB version; else echo "❌ adb not found!"; exit 1; fi
 
-  - echo "Checking emulator availability..."
-  - export EMULATOR="$ANDROID_HOME/emulator/emulator"
-  - if [ -f "$EMULATOR" ]; then echo "✅ emulator found"; $EMULATOR -version; else echo "❌ emulator not found! Installing..."; $SDKMANAGER "emulator" --sdk_root=$ANDROID_HOME; fi
+  # - echo "Checking emulator availability..."
+  # - export EMULATOR="$ANDROID_HOME/emulator/emulator"
+  # - if [ -f "$EMULATOR" ]; then echo "✅ emulator found"; $EMULATOR -version; else echo "❌ emulator not found!"; exit 1; fi
 
   - echo "Checking installed components..."
   - echo "Checking build-tools;30.0.0..."
@@ -58,4 +39,4 @@ script:
   - echo "Checking Google Play Services..."
   - if [ -d "$ANDROID_HOME/extras/google/google_play_services" ]; then echo "✅ Google Play Services found"; else echo "❌ Google Play Services not found!"; exit 1; fi
 
-  - echo "All checks passe ✅"
+  - echo "All checks passed! ✅"
