--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - echo "Przygotowywanie środowiska przed kompilacją..."
   - ls -la /usr/local/android-sdk/android-sdk
   - ls -la /usr/local/android-sdk
-  - chmod -R 777 /usr/local/android-sdk/android-sdk
+  - sudo chmod -R 777 /usr/local/android-sdk/android-sdk
   - sudo chmod -R 777 /usr/local/android-sdk/android-sdk
   - sudo chmod -R 777 /usr/local/android-sdk
   - sdkmanager --list
