--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ group: dev
 
 before_script:
   - echo "Przygotowywanie środowiska przed kompilacją..."
-  - if [ -d "/usr/local/android-sdk/cmdline-tools/" ]; then echo "Android cmdline-tools directory exists."; else echo "WARNING: /usr/local/android-sdk/cmdline-tools/ not found!"; fi
+  - ls -ltrR /usr/local/android-sdk/cmdline-tools
 
 script:
   - echo "Zakończenie kompilacji..."
